--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.32 / onion software 1997-2013(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.4 / onion software 1997-2013(c)</p>
 		<img src="doclib/hsp3ttl.jpg" width="640" height="200" alt="タイトル">
 		<h1>HSPマニュアル総合インデックス</h1>
 		
@@ -54,6 +54,7 @@
 					<ul>
 						<li><a href="doclib/elm2d_edit.txt">HGIMG3 2D Elements Editor（HGIMG3ユーザー向け）（elm2d_edit.txt）</a></li>
 					</ul>
+					<li><a href="doclib/hgimg4.txt">HGIMG4 マニュアル（hgimg4.txt）</a></li>
 					<li><a href="doclib/hspogg.txt">HSPOGG.DLL マニュアル（hspogg.txt）</a></li>
 					<li><a href="doclib/hspinet.txt">HSPINET.DLL マニュアル（hspinet.txt）</a></li>
 					<li><a href="doclib/hspsock.txt">HSPSOCK.DLL マニュアル（hspsock.txt）</a></li>
