ドキュメントの修正
Former-commit-id: 9e02ffb37ee1ba8333f76d65ca5fc388129918fa

--- a/package/win32/doclib/module.htm
+++ b/package/win32/doclib/module.htm
@@ -144,21 +144,7 @@
 *main
     routine</pre>
 		<p>
-			でも同じということです。ただし、「#deffunc」には1つだけ注意点があります。
-			それは<em>「#deffunc」は実際に命令を使う位置よりも前に置く</em>ということです。
-		</p>
-		<p>
-			これはたとえば、gosub命令の場合は呼び出すサブルーチン(ラベル)が
-			gosub命令よりも前にあっても、後にあっても問題はありませんでした。
-			「#deffunc」では追加した命令が使えるようになるのは、「#deffunc」
-			の定義位置から先になります。
-		</p>
-		<p>
-			これは、スクリプトのコンパイル時に新規キーワードが変数か命令かを
-			決定するために、あらかじめ定義されていることが必要なためです。
-			「#deffunc」を使って新しい命令を作る場合は、サブルーチンを先に、
-			メインのスクリプトはその後にするような構成を取るように心がけて
-			みてください。
+			でも同じということです。
 		</p>
 		<p>
 			またユーザー定義命令は、サブルーチンにパラメータを渡すことを
