画像をプリンタで印刷するための新規プラグインhspprintを追加 [HGIMG3] hgbye命令で終了後に再びhgini命令で初期化した際に正しくウインドウサイズが反映されない不具合を修正 [HSP3Dish][iOS] HSP3Dish helperからのXCode5プロジェクト出力に対応 [HSP3Dish][iOS] iAdによる広告が正しく出ないことがある不具合を修正
Former-commit-id: ccaa1e0f8db6d881b5d2d42b801a566456cb5ae5

--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -120,7 +120,7 @@
 	これらのOSをご利用のユーザーには大変不自由をお掛けしますが、同梱されているシンプルなエディタ(hsed3le.exe)か、またはHSP3.21まで使用していたFooty1版のエディタ(hsed3f1.exe)をお使い頂くことを推奨致します。
 	Windows 2000以降のOS(Windows XP,Vista,7)環境であれば、新しいエディタは特に問題なく使用することができます。
 <br>
-<li>オートインデント利用時の空行はTAB1がつ含まれた行となります<br>
+<li>オートインデント利用時の空行はTABが1つ含まれた行となります<br>
 以前のスクリプトエディタでは、ただの空行とされていました。今後のバージョンでは、以前のエディタに近い動作に修正していきたいと考えています。
 </ul>
 <br>
