--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 	<!-- ヘッダー -->
-	<p id="COPY">HSP : HSP3Dish / onion software 2013(c)</p>
+	<p id="COPY">HSP : HSP3Dish / onion software 2014(c)</p>
 	<img src="hsp3dish.jpg" width="640" height="200" alt="タイトル">
 	<h1>HSP3Dish プログラミングマニュアル・基本仕様ガイド</h1>
 
@@ -33,6 +33,7 @@
 		<li><a href="#CMDLIST">HSP3Dishコマンドリスト</a></li>
 		<li><a href="#WINHRT">Windows上での実行ファイル作成</a></li>
 		<li><a href="#INIFILE">起動設定ファイルについて</a></li>
+		<li><a href="#OBAQ">物理エンジンOBAQのサポート</a></li>
 		<li><a href="#EXCHANGE">他プラットフォームへの変換</a></li>
 		<li><a href="#INPUT">各種入出力への対応について</a></li>
 		<li><a href="#KNOWNBUG">既知の不具合について</a></li>
@@ -405,6 +406,17 @@
 	#packopt xsize 320		; 横サイズ
 	#packopt ysize 480		; 縦サイズ
 	</pre>
+
+	<h2 id="OBAQ">物理エンジンOBAQのサポート</h2>
+	<p>
+	HSP3Dishでは、物理エンジンOBAQの機能をサポートしています。
+	OBAQプラグインが持つ命令と同等の機能をHSP3Dish上で利用可能です。
+	</p>
+	<p>
+	現在のバージョンでは、Windows版、android版のみサポートされています。iOS版は将来のバージョンで対応予定です。<br>
+	詳しい使用方法は、物理エンジンOBAQのマニュアルを参照してください。
+	</p>
+
 
 	<h2 id="EXCHANGE">他プラットフォームへの変換</h2>
 	<p>
