ドキュメントの修正
Former-commit-id: 3c8ffa83155277ab45768def82506fda323771ef

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -412,13 +412,14 @@
 	HSP3Dishでは、物理エンジンOBAQの機能をサポートしています。
 	OBAQプラグインが持つ命令と同等の機能をHSP3Dish上で利用可能です。<br>
 	物理エンジンOBAQの機能は、qreset命令実行後に有効となります。
-	OBAQプラグイン命令を使用しない場合は、余計なメモリ、CPUリソースを一切使用しません。
+	OBAQプラグイン命令を使用しない場合は、余計なメモリ、CPUリソースを一切使用しません。<br>
+	詳しい使用方法は、物理エンジン<a href="obaq.txt">OBAQのマニュアル</a>を参照してください。
 	</p>
-	<p>
-	現在のバージョンでは、Windows版、iOS版、android版でサポートされています。<br>
-	詳しい使用方法は、物理エンジンOBAQのマニュアルを参照してください。
-	</p>
-
+	<p><b>
+	※物理エンジンOBAQは、HSP3Dishとは異なるライセンスで運用されています。
+	OBAQを使用したソフトにより、税務申告が必要な利益が発生する場合(有料アプリによる利益が大きい場合)には、有償ライセンスの取得が必要です。ただし、少数の配布、最低限の必要経費(メディア代金等)のみで配布する場合は無償と考えますので、有償ライセンスの取得は必要ありません。
+	もちろん無償アプリの場合には、ライセンスの取得は必要ありません。
+	</b></p>
 
 	<h2 id="EXCHANGE">他プラットフォームへの変換</h2>
 	<p>
