ドキュメントの微修正
Former-commit-id: 82043ab5d539d710c57a9153971d398fc3b0f5d0

--- a/package/win32/doclib/hspprog.htm
+++ b/package/win32/doclib/hspprog.htm
@@ -1207,6 +1207,7 @@ p2=0～65535(0)</pre>
     /* ここはコメントです */ goto *start</pre>
 		<p>
 			スペース、タブは見やすくするために自由に入れることができます。
+			(標準の設定では全角スペースも、スペースとみなされます。)
 		</p>
 
 		<h3 id="EXPRESSION">式</h3>
