β3でレジューム時のテクスチャ復帰がおかしくなっていたのを修正 ドキュメントの修正
Former-commit-id: db052a111a7feaea982ac8db5528f121e7788a26

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -36,6 +36,7 @@
 		<li><a href="#RELEASE">リリースビルド</a></li>
 		<li><a href="#DEVCONTROL">デバイスコントロールについて</a></li>
 		<li><a href="#ADMOB">AdMobによる広告配信</a></li>
+		<li><a href="#FONTMES">mes,print命令について</a></li>
 		<li><a href="#NOTICE">android版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">android版の更新予定</a></li>
 	</ol>
@@ -588,6 +589,26 @@
 	</ul>
 
 
+	<h2 id="FONTMES">mes,print命令について</h2>
+	<p>
+	現在のバージョンでは、内蔵フォントによるmes及びprint命令の文字列描画に対応しています。<br>
+	font命令で指定する、font名は無視され、フォントサイズは反映されます。また、フォントスタイルは標準(0)と太文字(1)にのみ対応しています。<br>
+	android上のフォントを取得する処理は、システムの負担が大きいため一度描画した内容(テクスチャ)はHSP3Dish側でキャッシュすることで高速化する仕組みになっています。
+	通常は、この仕組みについて意識することなく使用することができるはずです。<br>
+	キャッシュ機能のコントロールを行ないたい場合は、sysreq命令により設定を記述してください。(Windows,iOS版には影響ありません)
+<pre>
+		sysreq SYSREQ_MESCACHE_MAX, 64	; キャッシュの最大登録数を指定する
+</pre>
+	キャッシュの内部動作としては、一度表示したメッセージとまったく同じ内容の文字列があった場合に、
+	以前のデータを再利用して表示することになります。
+	ただし、８フレームの間表示されなかったキャッシュは破棄されます。<br>
+	保持されるキャッシュの最大登録数は、デフォルトで64になっています。
+	キャッシュの設定範囲は、0～128が目安で、数値が大きくても高速化されるとは限りません。
+	あくまでも、顕著な速度低下を抑制することが目的で、もともとメッセージ表示はコストの高い処理であることをご理解の上使用してください。<br>
+	キャッシュの最大登録数を0に設定した場合は、キャッシュによる高速化は行なわれません。
+	</p>
+
+
 	<h2 id="NOTICE">android版の注意事項、制限</h2>
 	<ul>
 	<li>入力可能な情報</li>
@@ -627,12 +648,6 @@
 	画像ファイルはプロジェクトディレクトリ内のassetsフォルダに入れることができます。
 	ただし、リソースのサイズ・個数に制限があるため、1MBを越える大きなファイルを多数使用する場合は、data.dpmに含めて使用してください。
 	</p>
-	<li>mes,print命令について</li>
-	<p>
-	現在のバージョンでは、mes及びprint命令で表示可能な文字列は半角英文字・記号のみになっています。デフォルトで16x16ドットの固定フォントが用意されています。<br>
-	日本語を含むすべての文字を表示する場合は、あらかじめ画像データとして用意するなどの対応が必要になります。<br>
-	これは、android(NDK)版のみの制約事項です。将来のバージョンでは、対応を行なっていく予定です。
-	</p>
 	<li>再生可能なサウンドファイルについて</li>
 	<p>
 	拡張子が「.wav」「.mp3」「.ogg」「.aac」のファイルに対応しています。
@@ -671,7 +686,6 @@
 	<li>傾きセンサーの入力情報の取得</li>
 	<li>dialog命令によるダイアログ表示サポート</li>
 	<li>各種システム情報取得</li>
-	<li>日本語フォントの描画サポート</li>
 	<li>http接続、ブラウザの呼び出しサポート</li>
 	<li>HGIMG4のサポート</li>
 	</ul>
