--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -27,7 +27,6 @@
 		<li><a href="#DHNEWPROJ">新規プロジェクトの作成</a></li>
 		<li><a href="#DHPROJ">プロジェクトのビルド</a></li>
 		<li><a href="#SAMPLE">サンプルプロジェクト</a></li>
-		<li><a href="#COMP">ソースのコンパイル</a></li>
 		<li><a href="#RUNPROJ">実機への転送と実行</a></li>
 		<li><a href="#DATAFILE">データファイルの準備</a></li>
 		<li><a href="#SYSINFO">システム情報の取得</a></li>
@@ -595,9 +594,9 @@
 	font命令で指定する、font名は無視され、フォントサイズは反映されます。また、フォントスタイルは標準(0)と太文字(1)にのみ対応しています。<br>
 	android上のフォントを取得する処理は、システムの負担が大きいため一度描画した内容(テクスチャ)はHSP3Dish側でキャッシュすることで高速化する仕組みになっています。
 	通常は、この仕組みについて意識することなく使用することができるはずです。<br>
-	キャッシュ機能のコントロールを行ないたい場合は、sysreq命令により設定を記述してください。(Windows,iOS版には影響ありません)
+	キャッシュ機能のコントロールを行ないたい場合は、setreq命令により設定を記述してください。(Windows,iOS版には影響ありません)
 <pre>
-		sysreq SYSREQ_MESCACHE_MAX, 64	; キャッシュの最大登録数を指定する
+		setreq SYSREQ_MESCACHE_MAX, 64	; キャッシュの最大登録数を指定する
 </pre>
 	キャッシュの内部動作としては、一度表示したメッセージとまったく同じ内容の文字列があった場合に、
 	以前のデータを再利用して表示することになります。
